--- a/style.css
+++ b/style.css
@@ -9,9 +9,25 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 93.75%;
+}
+
 body{
     background: #f0f2f5;
     font-family: 'Poppins', sans-serif;
+}
+
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container{
@@ -20,6 +36,8 @@ body{
     margin: auto;
 }
 
+/* ============TITLES============= */
+
 h2{
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
@@ -27,6 +45,25 @@ h2{
 
     font-weight: normal;
 }
+
+/* ===============LINKS & BUTTONS=============== */
+
+a{
+    color: #49aa26;
+    text-decoration: none;
+
+}
+
+a:hover{
+    color: #3dd705;    
+}
+
+.button.new{
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
+
 
 /* ============HEADER============= */
 
@@ -67,6 +104,10 @@ header{
 .card h3{
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }   
 
 .card p{
@@ -83,14 +124,22 @@ header{
 
 /* ==============TABLE=============== */
 #data-table{
+    display: block;
     width: 100%;
     border-spacing: 0 0.5rem ;
     color: #969cb3;
+
+    overflow-x: auto;
 }
 
 table thead tr th:first-child,
 table tbody tr td:first-child{
     border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child{
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table thead th{
@@ -137,4 +186,19 @@ footer{
     color: var(--color-dark);
 
     opacity: 0.6;
+}
+
+
+/* =========MEDIA-QUERIES============== */
+
+@media (min-width: 800px){
+    html{
+        font-size: 87.5%;
+    }
+    
+    #balance{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
