--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* ==========GLOBAL=========== */
 :root{
     --color-dark: #363f5f;
+    --green:  #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929;
 }
 
 *{
@@ -49,18 +52,58 @@ h2{
 /* ===============LINKS & BUTTONS=============== */
 
 a{
-    color: #49aa26;
+    color:var(--green);
     text-decoration: none;
 
 }
 
 a:hover{
-    color: #3dd705;    
+    color: var(--light-green);    
+}
+
+button{
+    width: 100%;
+    height: 50px;
+
+    border: none;
+
+    color: white;
+    background: var(--green);
+
+    padding: 0;
+
+    border-radius: 0.25rem;
+
+    cursor: pointer;
+}
+
+button:hover{
+    background: var(--light-green) ;
 }
 
 .button.new{
     display: inline-block;
     margin-bottom: .8rem;
+}
+
+
+.button.cancel{
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0.6;
+
+}
+
+.button.cancel:hover{
+    opacity: 1;
 }
 
 
@@ -118,18 +161,23 @@ header{
 }
 
 .card.total{
-    background-color: #49aa26;
+    background-color:var(--green);
     color: white;
 }
 
 /* ==============TABLE=============== */
-#data-table{
+#transaction{
     display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+#data-table{
     width: 100%;
     border-spacing: 0 0.5rem ;
     color: #969cb3;
 
-    overflow-x: auto;
+    
 }
 
 table thead tr th:first-child,
@@ -176,6 +224,75 @@ td.income{
 
 td.expense{
     color: #e92929;
+}
+
+/* ==============MODAL================== */
+.modal-overlay{
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0, 0.7);
+
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+
+}
+
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal{
+    background: #F0F2F5;
+    padding: 2.4rem;
+     
+
+}
+
+/* ================FORM================ */
+
+#form{
+    max-width: 500px;
+}
+
+#form h2{
+    margin-top: 0;
+}
+
+.input-group{
+    margin-top: 0.8rem;
+}
+
+.input-group small{
+    opacity: 0.4;
+}
+
+.input-group.actions{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input{
+    border: none;
+    border-radius: 0.2rem;
+
+    padding: 0.8rem;
+
+    width: 100%;
+}
+
+.input-group.actions button,
+.input-group.actions .button{
+    width: 48%;
 }
 
 /* ==============FOOTER=============== */
